--- a/frontend/src/admin/admin-user-editor/admin-user-editor.component.html
+++ b/frontend/src/admin/admin-user-editor/admin-user-editor.component.html
@@ -78,31 +78,6 @@
             </app-image>
           </div>
   
-          <p>Old password:</p>
-          <div class="input-group">
-            <app-input
-              [id]="'oldPassword'"
-              [formInputStyle]="'user-edit__input'"
-              [type]="'password'"
-              [placeholder]="'Old password'"
-              [controlName]="updateUserForm.controls.changePasswordGroup.controls.oldPassword">
-            </app-input>
-            <app-error
-              [class]="'user-editor-error-msg'"
-              *ngIf="
-                updateUserForm.get('changePasswordGroup.oldPassword').errors?.required &&
-                updateUserForm.get('changePasswordGroup.oldPassword').touched">
-              {{ validationMessages.required }}
-            </app-error>
-            <app-error
-              [class]="'user-editor-error-msg'"
-              *ngIf="
-                updateUserForm.get('changePasswordGroup.oldPassword').errors?.minlength &&
-                updateUserForm.get('changePasswordGroup.oldPassword').touched">
-              {{ validationMessages.password }}
-            </app-error>
-          </div>
-  
           <div class="input-group">
             <p>New password:</p>
             <app-input
@@ -111,20 +86,20 @@
               [placeholder]="'New password'"
               [type]="'password'"
               [controlName]="
-                updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.password">
+                updateUserForm.controls.changePasswordGroup.controls.password">
             </app-input>
             <app-error
               [class]="'user-editor-error-msg'"
               *ngIf="
-                updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.required &&
-                updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
+                updateUserForm.get('changePasswordGroup.password').errors?.required &&
+                updateUserForm.get('changePasswordGroup.password').touched">
               {{ validationMessages.required }}
             </app-error>
             <app-error
               [class]="'user-editor-error-msg'"
               *ngIf="
-                updateUserForm.get('changePasswordGroup.passwordGroup.password').errors?.minlength &&
-                updateUserForm.get('changePasswordGroup.passwordGroup.password').touched">
+                updateUserForm.get('changePasswordGroup.password').errors?.minlength &&
+                updateUserForm.get('changePasswordGroup.password').touched">
               {{ validationMessages.password }}
             </app-error>
   
@@ -137,19 +112,19 @@
               [placeholder]="'Confirm password'"
               [type]="'password'"
               [controlName]="
-                updateUserForm.controls.changePasswordGroup.controls.passwordGroup.controls.repeatPassword">
+                updateUserForm.controls.changePasswordGroup.controls.repeatPassword">
             </app-input>
             <app-error
               [class]="'user-editor-error-msg'"
               *ngIf="
-                updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').errors
+                updateUserForm.get('changePasswordGroup.repeatPassword').errors
                   ?.required &&
-                updateUserForm.get('changePasswordGroup.passwordGroup.repeatPassword').dirty">
+                updateUserForm.get('changePasswordGroup.repeatPassword').dirty">
               {{ validationMessages.required }}
             </app-error>
             <app-error
               [class]="'user-editor-error-msg'"
-              *ngIf="updateUserForm.get('changePasswordGroup.passwordGroup').errors?.match">
+              *ngIf="updateUserForm.get('changePasswordGroup').errors?.match">
               {{ validationMessages.matchingPassword }}
             </app-error>
           </div>
