--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -50,15 +50,14 @@ body {
       grid-row: 1/7;
     }
     
-    app-admin-user-editor{
+    app-admin-user-editor, app-user-editor{
       grid-column: 2/7;
       grid-row: 2/3;
       padding-top: 2em;
   }
 
     app-main,
-    app-example1,
-    app-user-editor {
+    app-example1{
       grid-column: 2/8;
 
         app-subpage-container {
@@ -67,9 +66,7 @@ body {
             display: flex;
             justify-content: center;
         }
-       
-        
-        
+
       app-main {
         grid-row: 2/3;
       }
